--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blooddonation-backend",
+  "name": "blooddonation--backend",
   "version": "1.0.0",
   "description": "",
   "homepage": "https://github.com/Charitha-Prabashwara/BloodDonation-BackEnd#readme",
@@ -22,6 +22,7 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
+    "blooddonation--backend": "file:",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
