create user sign up and verify

--- a/.env
+++ b/.env
@@ -1,3 +1,19 @@
+APP_NAME=BloodDonation
+
 MONO_URI=mongodb+srv://seudev:UQ9Ev9rHJxsg5ZS0@developmentcluster.5cw5h.mongodb.net/
 MONO_DB=Blood_donation
 PORT=8000
+
+
+#SMTP SERVICE
+SMTP_HOST=gmail
+SMTP_PORT=
+SMTP_AUTH_USER=zed.zero.fun@gmail.com
+SMTP_AUTH_PASSWORD=ppxmakvuzvhjoeaa
+
+#bcrypt
+SALT_ROUNDS=10
+
+#VerifyEmailToken
+VERIFY_TOKEN_SECRET=fjsfjfjfjsdfjfj8ru38ru8rfhfdufuhf2ui3fh2f983yr2h828r2hr
+VERIFY_TOKEN_LIFE_TIME=1d
