--- a/.env
+++ b/.env
@@ -17,3 +17,10 @@ SALT_ROUNDS=10
 #VerifyEmailToken
 VERIFY_TOKEN_SECRET=fjsfjfjfjsdfjfj8ru38ru8rfhfdufuhf2ui3fh2f983yr2h828r2hr
 VERIFY_TOKEN_LIFE_TIME=1d
+
+#userToken
+USER_TOKEN_ACCESS_SECRET=fjsfjfjfjsdfjfj8ru38ru8rfhfdufuhf2ui3fh2f983yr2h828r2hr
+USER_TOKEN_ACCESS_LIFE_TIME=1h
+
+USER_TOKEN_REFRESH_SECRET=fjsfjfjfjsdfjfj8ru38ru8rfhfdufuhf2ui3fh2f983yr2h828r2hr
+USER_TOKEN_REFRESH_LIFE_TIME=30d
