--- a/.env
+++ b/.env
@@ -24,3 +24,6 @@ USER_TOKEN_ACCESS_LIFE_TIME=1h
 
 USER_TOKEN_REFRESH_SECRET=fjsfjfjfjsdfjfj8ru38ru8rfhfdufuhf2ui3fh2f983yr2h828r2hr
 USER_TOKEN_REFRESH_LIFE_TIME=30d
+
+PASSWORD_REST_TOKEN_REFRESH_SECRET=fjsfjfjfjsdfjfj8ru38ru8rfhfdufuhf2ui3fh2f983yr2h828r2hr
+PASSWORD_REST_LIFE_TIME=1m
